--- a/jbehave-core/pom.xml
+++ b/jbehave-core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbehave</groupId>
     <artifactId>jbehave</artifactId>
-    <version>3.8-Arquillian</version>
+    <version>3.8-Arquillian-v1.1-beta</version>
   </parent>
   <packaging>jar</packaging>
   <artifactId>jbehave-core</artifactId>
